force-app/main/default/objects/MOCK_Score_Reason__c/MOCK_Score_Reason__c.object-meta.xml
<CustomObject>
    <label>Score Reason</label>
    <nameField>
        <displayFormat>SR - {0000}</displayFormat>
        <label>Score Reason</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Score Reasons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>