force-app/main/default/objects/MOCK_Score_Reason__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <description>Confidence level for indicator. Range from -3 to 3. Negative numbers represent confidence of a negative insight.</description>
    <inlineHelpText>Confidence level for indicator. Range from -3 to 3. Negative numbers represent confidence of a negative insight.</inlineHelpText>
    <label>Confidence</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>