force-app/main/default/objects/MOCK_Score_Reason__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>