force-app/main/default/objects/MOCK_Score_Reason__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Score</label>
    <referenceTo>MOCK_Score__c</referenceTo>
    <relationshipLabel>Score Reasons</relationshipLabel>
    <relationshipName>Score_Reasons</relationshipName>
    <type>Lookup</type>
</CustomField>